crates/lexer/src/snapshots/lexer__tests__bracket.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: LEFT_PARENTHESIS,
            offset: 0,
        },
        Token {
            kind: RIGHT_PARENTHESIS,
            offset: 1,
        },
        Token {
            kind: LEFT_SQUARE,
            offset: 2,
        },
        Token {
            kind: RIGHT_SQUARE,
            offset: 3,
        },
        Token {
            kind: LEFT_CURLY,
            offset: 4,
        },
        Token {
            kind: RIGHT_CURLY,
            offset: 5,
        },
        Token {
            kind: END_OF_FILE,
            offset: 6,
        },
    ],
)
