crates/lexer/src/snapshots/lexer__tests__character.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: CHAR,
            offset: 0,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 3,
        },
    ],
)
