crates/lexer/src/snapshots/lexer__tests__character_escape.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: CHAR,
            offset: 0,
        },
        Token {
            kind: WHITESPACE,
            offset: 4,
        },
        Token {
            kind: CHAR,
            offset: 5,
        },
        Token {
            kind: WHITESPACE,
            offset: 9,
        },
        Token {
            kind: CHAR,
            offset: 10,
        },
        Token {
            kind: WHITESPACE,
            offset: 14,
        },
        Token {
            kind: CHAR,
            offset: 15,
        },
        Token {
            kind: WHITESPACE,
            offset: 19,
        },
        Token {
            kind: CHAR,
            offset: 20,
        },
        Token {
            kind: WHITESPACE,
            offset: 24,
        },
        Token {
            kind: CHAR,
            offset: 25,
        },
        Token {
            kind: WHITESPACE,
            offset: 29,
        },
        Token {
            kind: CHAR,
            offset: 30,
        },
        Token {
            kind: END_OF_FILE,
            offset: 36,
        },
    ],
)
