crates/lexer/src/snapshots/lexer__tests__end_of_file.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: END_OF_FILE,
            offset: 0,
        },
    ],
)
