crates/lexer/src/snapshots/lexer__tests__integer_leading_zero.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: INTEGER,
            offset: 0,
        },
        Token {
            kind: END_OF_FILE,
            offset: 1,
        },
    ],
)
