crates/lexer/src/snapshots/lexer__tests__lower_keywords.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: ADO,
            offset: 0,
        },
        Token {
            kind: WHITESPACE,
            offset: 3,
        },
        Token {
            kind: AS,
            offset: 4,
        },
        Token {
            kind: WHITESPACE,
            offset: 6,
        },
        Token {
            kind: CASE,
            offset: 7,
        },
        Token {
            kind: WHITESPACE,
            offset: 11,
        },
        Token {
            kind: CLASS,
            offset: 12,
        },
        Token {
            kind: WHITESPACE,
            offset: 17,
        },
        Token {
            kind: DATA,
            offset: 18,
        },
        Token {
            kind: WHITESPACE,
            offset: 22,
        },
        Token {
            kind: DERIVE,
            offset: 23,
        },
        Token {
            kind: WHITESPACE,
            offset: 29,
        },
        Token {
            kind: DO,
            offset: 30,
        },
        Token {
            kind: WHITESPACE,
            offset: 32,
        },
        Token {
            kind: ELSE,
            offset: 33,
        },
        Token {
            kind: WHITESPACE,
            offset: 37,
        },
        Token {
            kind: FALSE,
            offset: 38,
        },
        Token {
            kind: WHITESPACE,
            offset: 43,
        },
        Token {
            kind: FOREIGN,
            offset: 44,
        },
        Token {
            kind: WHITESPACE,
            offset: 51,
        },
        Token {
            kind: HIDING,
            offset: 52,
        },
        Token {
            kind: WHITESPACE,
            offset: 58,
        },
        Token {
            kind: IF,
            offset: 59,
        },
        Token {
            kind: WHITESPACE,
            offset: 61,
        },
        Token {
            kind: IMPORT,
            offset: 62,
        },
        Token {
            kind: WHITESPACE,
            offset: 68,
        },
        Token {
            kind: IN,
            offset: 69,
        },
        Token {
            kind: WHITESPACE,
            offset: 71,
        },
        Token {
            kind: INFIX,
            offset: 72,
        },
        Token {
            kind: WHITESPACE,
            offset: 77,
        },
        Token {
            kind: INFIXL,
            offset: 78,
        },
        Token {
            kind: WHITESPACE,
            offset: 84,
        },
        Token {
            kind: INFIXR,
            offset: 85,
        },
        Token {
            kind: WHITESPACE,
            offset: 91,
        },
        Token {
            kind: INSTANCE,
            offset: 92,
        },
        Token {
            kind: WHITESPACE,
            offset: 100,
        },
        Token {
            kind: LET,
            offset: 101,
        },
        Token {
            kind: WHITESPACE,
            offset: 104,
        },
        Token {
            kind: MODULE,
            offset: 105,
        },
        Token {
            kind: WHITESPACE,
            offset: 111,
        },
        Token {
            kind: NEWTYPE,
            offset: 112,
        },
        Token {
            kind: WHITESPACE,
            offset: 119,
        },
        Token {
            kind: OF,
            offset: 120,
        },
        Token {
            kind: WHITESPACE,
            offset: 122,
        },
        Token {
            kind: THEN,
            offset: 123,
        },
        Token {
            kind: WHITESPACE,
            offset: 127,
        },
        Token {
            kind: TRUE,
            offset: 128,
        },
        Token {
            kind: WHITESPACE,
            offset: 132,
        },
        Token {
            kind: TYPE,
            offset: 133,
        },
        Token {
            kind: WHITESPACE,
            offset: 137,
        },
        Token {
            kind: WHERE,
            offset: 138,
        },
        Token {
            kind: END_OF_FILE,
            offset: 143,
        },
    ],
)
