crates/lexer/src/snapshots/lexer__tests__lower_source.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: SOURCE_IDENTIFIER,
            offset: 0,
        },
        Token {
            kind: WHITESPACE,
            offset: 5,
        },
        Token {
            kind: SOURCE_IDENTIFIER,
            offset: 6,
        },
        Token {
            kind: WHITESPACE,
            offset: 14,
        },
        Token {
            kind: SOURCE_IDENTIFIER,
            offset: 15,
        },
        Token {
            kind: WHITESPACE,
            offset: 24,
        },
        Token {
            kind: SOURCE_IDENTIFIER,
            offset: 25,
        },
        Token {
            kind: WHITESPACE,
            offset: 34,
        },
        Token {
            kind: SOURCE_IDENTIFIER,
            offset: 35,
        },
        Token {
            kind: WHITESPACE,
            offset: 39,
        },
        Token {
            kind: SOURCE_IDENTIFIER,
            offset: 40,
        },
        Token {
            kind: END_OF_FILE,
            offset: 45,
        },
    ],
)
